Set overflow on root html to avoid scroll bug, rename program guides to program guide

--- a/web-registry/src/index.css
+++ b/web-registry/src/index.css
@@ -1,3 +1,8 @@
+html {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
